--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "balaji-sivasakthi",
-  "version": "1.0.3",
-  "description": "nothing is there  say about myself haha",
+  "version": "1.0.4",
+  "description": "nothing is there to say about myself",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
